# 24-3-timer

./: CMakeLists.txt  README.md
include/: functions.h
src/: CMakeLists.txt  functions.cpp  main.cpp
